--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@
 .faq-pattern::after {
   @apply content-[''] block absolute top-0 left-0 md:left-24 md:w-40 sm:left-16 md:h-40 w-32 h-32 bg-content-pattern bg-no-repeat;
 }
+
+.body {
+  color: #373b50;
+}
